--- a/index.html
+++ b/index.html
@@ -410,7 +410,8 @@
                 <label class="modal-label">
                     <span class="modal-span">Phone</span>
                     <span class="modal-input-wraper">
-                        <input type="tel" class="modal-input" name="user_phone" title="xxx-xxx-xx-xx" required>
+                        <input type="tel" class="modal-input" name="user_phone" title="xxx-xxx-xx-xx"
+                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" required>
                         <svg class="modal-icon" width=18 height=24 aria-label="Phone icon">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
@@ -446,19 +447,3 @@
 </body>
 
 </html>
-<!-- 
-<form class="footer-subscribe-form">
-    <label class="footer-form-label">
-        <span class="footer-form-span">Name</span>
-        <span class="footer-form-input-wraper">
-            <input class="footer-form-input" type="email" name="user_email" placeholder="E-mail"
-                title="Email" required>
-            <button class="footer-form-btn" type="submit">
-                Subscribe
-                <svg class="footer-form-icon" width=18 height=24 aria-label="Send icon">
-                    <use href="./images/icons.svg#icon-person"></use>
-                </svg>
-            </button>
-        </span>
-    </label>
-</form> -->
