--- a/portfolio.html
+++ b/portfolio.html
@@ -223,22 +223,21 @@
                     </li>
                 </ul>
             </div>
-            <form class="footer-subscribe-form">
-                <label class="footer-form-label" for="footer-form-subscribe">Subscribe</label>
-                <!-- <span class="footer-form-span">Name</span> -->
-                <span class="footer-form-input-wraper">
-                    <input class="footer-form-input" type="email" name="user_email" placeholder="E-mail" title="Email"
-                        id="footer-form-subscribe" required>
+            <div>
+                <p class="footer-form-title">Subscribe</p>
+                <form class="footer-subscribe-form">
+                    <label class="footer-form-label">
+                        <input class="footer-form-input" type="email" name="subscribe_user_email" placeholder="E-mail"
+                            title="Email" required>
+                    </label>
                     <button class="footer-form-btn" type="submit">
-                        <div class="footer-form-btn-wraper">
-                            Subscribe
-                            <svg class="footer-form-icon" width=24 height=24 aria-label="Send icon">
-                                <use href="./images/icons.svg#icon-send"></use>
-                            </svg>
-                        </div>
+                        Subscribe
+                        <svg class="footer-form-icon" width=24 height=24 aria-label="Send icon">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
                     </button>
-                </span>
-            </form>
+                </form>
+            </div>
         </div>
     </footer>
 </body>
