--- a/index.html
+++ b/index.html
@@ -368,22 +368,21 @@
                     </li>
                 </ul>
             </div>
-            <form class="footer-subscribe-form">
-                <label class="footer-form-label" for="footer-form-subscribe">Subscribe</label>
-                <!-- <span class="footer-form-span">Name</span> -->
-                <span class="footer-form-input-wraper">
-                    <input class="footer-form-input" type="email" name="user_email" placeholder="E-mail" title="Email"
-                        id="footer-form-subscribe" required>
+            <div>
+                <p class="footer-form-title">Subscribe</p>
+                <form class="footer-subscribe-form">
+                    <label class="footer-form-label">
+                        <input class="footer-form-input" type="email" name="subscribe_user_email" placeholder="E-mail"
+                            title="Email" required>
+                    </label>
                     <button class="footer-form-btn" type="submit">
-                        <div class="footer-form-btn-wraper">
-                            Subscribe
-                            <svg class="footer-form-icon" width=24 height=24 aria-label="Send icon">
-                                <use href="./images/icons.svg#icon-send"></use>
-                            </svg>
-                        </div>
+                        Subscribe
+                        <svg class="footer-form-icon" width=24 height=24 aria-label="Send icon">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
                     </button>
-                </span>
-            </form>
+                </form>
+            </div>
         </div>
     </footer>
 
@@ -397,48 +396,54 @@
             </button>
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="form">
-                <label class="modal-label">
-                    <span class="modal-span">Name</span>
-                    <span class="modal-input-wraper">
+                <div class="modal-label-wraper">
+                    <label class="modal-label" for="user-name">Name</label>
+                    <div class="modal-input-wraper">
                         <input class="modal-input" type="text" name="user_name" pattern="[A-Za-zа-яА-ЯіІїЇєЄ]+"
-                            title="John Doe" required>
+                            title="John Doe" id="user-name" required>
                         <svg class="modal-icon" width=18 height=24 aria-label="Person icon">
                             <use href="./images/icons.svg#icon-person"></use>
                         </svg>
-                    </span>
-                </label>
-                <label class="modal-label">
-                    <span class="modal-span">Phone</span>
-                    <span class="modal-input-wraper">
+                    </div>
+                </div>
+                <div class="modal-label-wraper">
+                    <label class="modal-label" for="user-name">Phone</label>
+                    <div class="modal-input-wraper">
                         <input type="tel" class="modal-input" name="user_phone" title="xxx-xxx-xx-xx"
                             pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" required>
                         <svg class="modal-icon" width=18 height=24 aria-label="Phone icon">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
-                    </span>
-                </label>
-                <label class="modal-label">
-                    <span class="modal-span">Email</span>
-                    <span class="modal-input-wraper">
+                    </div>
+                </div>
+                <div class="modal-label-wraper">
+                    <label class="modal-label" for="user-name">Email</label>
+                    <div class="modal-input-wraper">
                         <input class="modal-input" type="email" name="user_email" required>
                         <svg class="modal-icon" width=18 height=24 aria-label="Email icon">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
-                    </span>
-                </label>
-                <label class="modal-label">
-                    <span class="modal-span"><span class="modal-span">Comment</span></span>
-                    <textarea class="modal-textarea" type="textarea" placeholder="Text input"
-                        name="user_message"></textarea>
-                </label>
-                <label class="modal-checkbox-label">
-                    <input class="modal-checkbox" type="checkbox" name="user_accept_policy" required>
-                    <svg class="modal-checkbox-icon" width=16 height=16 aria-label="Click icon">
-                        <use href="./images/icons.svg#icon-click"></use>
-                    </svg>
-                    I accept the terms and conditions of the&nbsp;<a class="modal-checkbox-policy-link" href="">Privacy
-                        Policy</a>
-                </label>
+                    </div>
+                </div>
+                <div class="modal-checkbox-label-wraper">
+                    <label class="modal-label" for="user-comment">Comment</label>
+                    <textarea class="modal-textarea" placeholder="Text input" name="user-comment"
+                        id="user-comment"></textarea>
+                </div>
+                <div class="modal-privacy-wraper">
+                    <input class="modal-checkbox visually-hidden" type="checkbox" name="user-privacy" id="user-privacy"
+                        value="true" required>
+                    <label class="modal-checkbox-label" for="user-privacy">
+                        <span class="modal-checkbox-privacy-span">
+                            <svg class="modal-checkbox-icon" width=10 height=8 aria-label="Click icon">
+                                <use href="./images/icons.svg#icon-click"></use>
+                            </svg>
+                        </span>
+                        I accept the terms and conditions of
+                        the
+                        &nbsp;<a class="modal-checkbox-policy-link" href="">Privacy
+                            Policy</a></label>
+                </div>
                 <button class="modal-btn" type="submit">Send</button>
             </form>
         </div>
