--- a/portfolio.html
+++ b/portfolio.html
@@ -223,11 +223,11 @@
                     </li>
                 </ul>
             </div>
-            <div>
+            <div class="footer-subscribe-wraper">
                 <p class="footer-form-title">Subscribe</p>
                 <form class="footer-subscribe-form">
                     <label class="footer-form-label">
-                        <input class="footer-form-input" type="email" name="subscribe_user_email" placeholder="E-mail"
+                        <input class="footer-form-input" type="email" name="subscribe-user-email" placeholder="E-mail"
                             title="Email" required>
                     </label>
                     <button class="footer-form-btn" type="submit">
