--- a/index.html
+++ b/index.html
@@ -368,11 +368,11 @@
                     </li>
                 </ul>
             </div>
-            <div>
+            <div class="footer-subscribe-wraper">
                 <p class="footer-form-title">Subscribe</p>
                 <form class="footer-subscribe-form">
                     <label class="footer-form-label">
-                        <input class="footer-form-input" type="email" name="subscribe_user_email" placeholder="E-mail"
+                        <input class="footer-form-input" type="email" name="subscribe-user-email" placeholder="E-mail"
                             title="Email" required>
                     </label>
                     <button class="footer-form-btn" type="submit">
@@ -399,7 +399,7 @@
                 <div class="modal-label-wraper">
                     <label class="modal-label" for="user-name">Name</label>
                     <div class="modal-input-wraper">
-                        <input class="modal-input" type="text" name="user_name" pattern="[A-Za-zа-яА-ЯіІїЇєЄ]+"
+                        <input class="modal-input" type="text" name="user-name" pattern="[A-Za-zа-яА-ЯіІїЇєЄ]+"
                             title="John Doe" id="user-name" required>
                         <svg class="modal-icon" width=18 height=24 aria-label="Person icon">
                             <use href="./images/icons.svg#icon-person"></use>
@@ -407,19 +407,20 @@
                     </div>
                 </div>
                 <div class="modal-label-wraper">
-                    <label class="modal-label" for="user-name">Phone</label>
+                    <label class="modal-label" for="user-phone">Phone</label>
                     <div class="modal-input-wraper">
-                        <input type="tel" class="modal-input" name="user_phone" title="xxx-xxx-xx-xx"
-                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" required>
+                        <input class="modal-input" type="tel" name="user-phone"
+                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx" id="user-phone"
+                            required>
                         <svg class="modal-icon" width=18 height=24 aria-label="Phone icon">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="modal-label-wraper">
-                    <label class="modal-label" for="user-name">Email</label>
+                    <label class="modal-label" for="user-email">Email</label>
                     <div class="modal-input-wraper">
-                        <input class="modal-input" type="email" name="user_email" required>
+                        <input class="modal-input" type="email" name="user-email" id="user-email" required>
                         <svg class="modal-icon" width=18 height=24 aria-label="Email icon">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
@@ -439,8 +440,7 @@
                                 <use href="./images/icons.svg#icon-click"></use>
                             </svg>
                         </span>
-                        I accept the terms and conditions of
-                        the
+                        I accept the terms and conditions of the
                         &nbsp;<a class="modal-checkbox-policy-link" href="">Privacy
                             Policy</a></label>
                 </div>
